--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
     <link rel="stylesheet" href="/css/index.css" />
     <title>Tesla-Lib</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Cards</h2>
+    <div class="card">
+      <h1 class="card-title">This is a card title</h1>
+      <p class="card-body">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste accusamus
+        veritatis quo reiciendis enim sint voluptates, autem earum laborum
+        magnam?<a href="#">Go Here</a>
+      </p>
+    </div>
+  </body>
 </html>
