text&bg-color,text&bg-hover,text&bg-dark&light,

--- a/index.html
+++ b/index.html
@@ -8,8 +8,39 @@
     <title>Tesla-Lib</title>
   </head>
   <body>
+    <!-- colors -->
+    <span class="text-primary">Primary text</span> |
+    <span class="text-secondary">secondary text</span> |
+    <span class="text-purple">purple text</span> |
+    <span class="text-gray">gray text</span> |
+    <span class="text-red">red text</span> |
+    <span class="text-blue">blue text</span>|
+    <span class="text-yellow">yellow text</span>|
+    <span class="text-orange">orange text</span>|
+    <span class="text-info">info text</span>|
+    <span class="text-error">error text</span>|
+    <span class="text-green">green text</span>| <br /><br />
+
+    <span class="bg-primary text-white">primary bg</span>|
+    <span class="bg-secondary text-white">secondary bg</span>|
+    <span class="bg-green text-white">green bg</span>|
+    <span class="bg-red text-white">red bg</span>|
+    <span class="bg-purple text-white">purple bg</span>|
+    <span class="bg-blue text-white">blue bg</span>|
+    <span class="bg-error text-white">error bg</span>|
+    <span class="bg-yellow text-white">yellow bg</span>|
+    <span class="bg-orange text-white">orange bg</span>|
+    <span class="bg-gray text-white">gray bg</span>|
+    <span class="bg-black text-white">gray bg</span>| <br /><br />
+
+    <span class="bg-primary-dark-6 text-white">primary bg</span>|
+    <span class="bg-red-light-6 text-white">primary bg</span>| <br /><br />
+
+    <a href="#" class="text-primary text-hover-orange-dark-3">Hover me</a>
+    <a href="#" class="text-primary text-hover-green-light-3">Hover me</a>
+
     <h2>Cards</h2>
-    <div class="card">
+    <div class="card bg-hover-red-light-4">
       <h1 class="card-title">This is a card title</h1>
       <p class="card-body">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste accusamus
