--- a/index.html
+++ b/index.html
@@ -48,5 +48,16 @@
         magnam?<a href="#">Go Here</a>
       </p>
     </div>
+    <div class="container">
+      <button class="btn-primary">Hello</button>
+      <button class="btn-outlined-primary">Hello</button>
+      <button class="btn">GENERIC</button>
+      <button class="btn">GENERIC</button>
+      <button class="btn-secondary text-white">GENERIC</button>
+      <button class="btn-green text-white">GENERIC</button>
+      <button class="btn-outlined-green text-green text-hover-white">
+        GENERIC
+      </button>
+    </div>
   </body>
 </html>
