--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
       <button class="btn-outlined-green text-green text-hover-white">
         GENERIC
       </button>
+      <button class="btn-complement-purple text-white">Complement</button>
+      <button class="btn-complement-primary text-white">Complement</button>
     </div>
   </body>
 </html>
