--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <a href="#" class="text-primary text-hover-orange-dark-3">Hover me</a>
     <a href="#" class="text-primary text-hover-green-light-3">Hover me</a>
-
+    <hr class="mt-4 mb-4" />
     <h2>Cards</h2>
     <div class="card bg-hover-red-light-4">
       <h1 class="card-title">This is a card title</h1>
@@ -48,8 +48,9 @@
         magnam?<a href="#">Go Here</a>
       </p>
     </div>
+    <hr class="mt-4 mb-4" />
     <div class="container">
-      <button class="btn-primary">Hello</button>
+      <button class="btn-primary pr-2">Hello</button>
       <button class="btn-outlined-primary">Hello</button>
       <button class="btn">GENERIC</button>
       <button class="btn">GENERIC</button>
@@ -61,5 +62,18 @@
       <button class="btn-complement-purple text-white">Complement</button>
       <button class="btn-complement-primary text-white">Complement</button>
     </div>
+    <hr class="mt-4 mb-4" />
+    <div class="container">
+      <button class="pl-2">Button</button>
+    </div>
+    <br />
+    <hr class="mt-4 mb-4" />
+
+    <div class="font-sm">Hello</div>
+    <div class="font-nm">Hello</div>
+    <div class="font-md">Hello</div>
+    <div class="font-xl">Hello</div>
+    <div class="font-xxl">Hello</div>
+    <div class="font-4xl">Hello</div>
   </body>
 </html>
