--- a/index.html
+++ b/index.html
@@ -8,48 +8,55 @@
     <title>Tesla-Lib</title>
   </head>
   <body>
-    <!-- colors -->
-    <span class="text-primary">Primary text</span> |
-    <span class="text-secondary">secondary text</span> |
-    <span class="text-purple">purple text</span> |
-    <span class="text-gray">gray text</span> |
-    <span class="text-red">red text</span> |
-    <span class="text-blue">blue text</span>|
-    <span class="text-yellow">yellow text</span>|
-    <span class="text-orange">orange text</span>|
-    <span class="text-info">info text</span>|
-    <span class="text-error">error text</span>|
-    <span class="text-green">green text</span>| <br /><br />
-
-    <span class="bg-primary text-white">primary bg</span>|
-    <span class="bg-secondary text-white">secondary bg</span>|
-    <span class="bg-green text-white">green bg</span>|
-    <span class="bg-red text-white">red bg</span>|
-    <span class="bg-purple text-white">purple bg</span>|
-    <span class="bg-blue text-white">blue bg</span>|
-    <span class="bg-error text-white">error bg</span>|
-    <span class="bg-yellow text-white">yellow bg</span>|
-    <span class="bg-orange text-white">orange bg</span>|
-    <span class="bg-gray text-white">gray bg</span>|
-    <span class="bg-black text-white">gray bg</span>| <br /><br />
-
-    <span class="bg-primary-dark-6 text-white">primary bg</span>|
-    <span class="bg-red-light-6 text-white">primary bg</span>| <br /><br />
-
-    <a href="#" class="text-primary text-hover-orange-dark-3">Hover me</a>
-    <a href="#" class="text-primary text-hover-green-light-3">Hover me</a>
-    <hr class="mt-4 mb-4" />
-    <h2>Cards</h2>
-    <div class="card bg-hover-red-light-4">
-      <h1 class="card-title">This is a card title</h1>
-      <p class="card-body">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste accusamus
-        veritatis quo reiciendis enim sint voluptates, autem earum laborum
-        magnam?<a href="#">Go Here</a>
-      </p>
-    </div>
-    <hr class="mt-4 mb-4" />
+    <nav class="navbar-orange text-white mb-4">
+      <div class="container">
+        <h2 class="site-title">Ben CSS</h2>
+        <p>A lightweight css library</p>
+      </div>
+    </nav>
     <div class="container">
+      <!-- colors -->
+      <span class="text-primary">Primary text</span> |
+      <span class="text-secondary">secondary text</span> |
+      <span class="text-purple">purple text</span> |
+      <span class="text-gray">gray text</span> |
+      <span class="text-red">red text</span> |
+      <span class="text-blue">blue text</span>|
+      <span class="text-yellow">yellow text</span>|
+      <span class="text-orange">orange text</span>|
+      <span class="text-info">info text</span>|
+      <span class="text-error">error text</span>|
+      <span class="text-green">green text</span>| <br /><br />
+
+      <span class="bg-primary text-white">primary bg</span>|
+      <span class="bg-secondary text-white">secondary bg</span>|
+      <span class="bg-green text-white">green bg</span>|
+      <span class="bg-red text-white">red bg</span>|
+      <span class="bg-purple text-white">purple bg</span>|
+      <span class="bg-blue text-white">blue bg</span>|
+      <span class="bg-error text-white">error bg</span>|
+      <span class="bg-yellow text-white">yellow bg</span>|
+      <span class="bg-orange text-white">orange bg</span>|
+      <span class="bg-gray text-white">gray bg</span>|
+      <span class="bg-black text-white">gray bg</span>| <br /><br />
+
+      <span class="bg-primary-dark-6 text-white">primary bg</span>|
+      <span class="bg-red-light-6 text-white">primary bg</span>| <br /><br />
+
+      <a href="#" class="text-primary text-hover-orange-dark-3">Hover me</a>
+      <a href="#" class="text-primary text-hover-green-light-3">Hover me</a>
+      <hr class="mt-4 mb-4" />
+      <h2>Cards</h2>
+      <div class="card bg-hover-red-light-4">
+        <h1 class="card-title">This is a card title</h1>
+        <p class="card-body">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste
+          accusamus veritatis quo reiciendis enim sint voluptates, autem earum
+          laborum magnam?<a href="#">Go Here</a>
+        </p>
+      </div>
+      <hr class="mt-4 mb-4" />
+
       <button class="btn-primary pr-2">Hello</button>
       <button class="btn-outlined-primary">Hello</button>
       <button class="btn">GENERIC</button>
@@ -61,19 +68,65 @@
       </button>
       <button class="btn-complement-purple text-white">Complement</button>
       <button class="btn-complement-primary text-white">Complement</button>
-    </div>
-    <hr class="mt-4 mb-4" />
-    <div class="container">
-      <button class="pl-2">Button</button>
-    </div>
-    <br />
-    <hr class="mt-4 mb-4" />
 
-    <div class="font-sm">Hello</div>
-    <div class="font-nm">Hello</div>
-    <div class="font-md">Hello</div>
-    <div class="font-xl">Hello</div>
-    <div class="font-xxl">Hello</div>
-    <div class="font-4xl">Hello</div>
+      <hr class="mt-4 mb-4" />
+
+      <button class="pl-2">Button</button>
+
+      <br />
+      <hr class="mt-4 mb-4" />
+
+      <div class="font-sm">Hello</div>
+      <div class="font-nm">Hello</div>
+      <div class="font-md">Hello</div>
+      <div class="font-xl">Hello</div>
+      <div class="font-xxl">Hello</div>
+      <div class="font-4xl">Hello</div>
+      <hr class="mt-4 mb-4" />
+      <div class="responsive-test">Hello</div>
+      <hr class="mt-4 mb-4" />
+
+      <h2 class="mb-2">Grid System</h2>
+
+      <div class="row gap-3 justify-center">
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello Reader</h3>
+            <p class="card-body">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio,
+              veniam.
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello Reader</h3>
+            <p class="card-body">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio,
+              veniam.
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello Reader</h3>
+            <p class="card-body">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio,
+              veniam.
+            </p>
+          </div>
+        </div>
+        <div class="col-12-xs col-5-sm col-3-xl">
+          <div class="card">
+            <h3 class="card-title">Hello Reader</h3>
+            <p class="card-body">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio,
+              veniam.
+            </p>
+          </div>
+        </div>
+      </div>
+      <hr class="mt-4 mb-4" />
+    </div>
   </body>
 </html>
